--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 
 <body>
     <section class="container">
-        <p id="question">What is A ?</p>
+        <p id="question"></p>
         <ul id="choices">
-            <li>A0</li>
-            <li>A1</li>
-            <li>A2</li>
         </ul>
-        <div id="btn">Next</div>
+        <div id="btn" class="disabled">Next</div>
     </section>
     <script src="js/main.js"></script>
 </body>
